it is intended that clients can use this information to enable optional
features that only work with this version of the server, but without
disturbing the official windows client

fixed bug in share_file() where the escaped filename was not inserted into
the db

fixed bug where the argument to the TYPE search parameter was not skipped

Changes from 0.10
=================
added max_connections config variable

rewrote i/o handling to avoid copying data by using a buffer list.

changed server->server compression to use a stream to compress the entire
session.

servers now negotiate the compression level upon connection

added support for searching the database using soundex hashes.  client
syntax in the 200 message is
	SOUNDEX CONTAINS "..."
each soundex word should be separated by a space inside the quotes.

search no longer returns matches for the user issuing the search

search should use <= and >= for AT MOST and AT LEAST

added support for sharing generic media types

fixes to compile under Red Hat Linux 6.0 (Alpha)

added -l option to opennap and metaserver to specify a specific ip to listen
on for incoming connections instead of any device

fixes to compile cleanly without debugging enabled (not recommended at this
point)

change_speed() needs to update the library table so that searches by speed
are correct after a user changes their line speed

Changes from 0.09
=================

added `max_user_channels' as a configuration option

added additional integrity checking to the validate_*() functions in
debug mode

server variables can be dynamically changed using the 810 client message
(colten edwards)

login() should ensure that the given speed is in the 0-10 range

search() was sending the host using %d instead of %lu

server_connect() should check the return from split_line() to get the number
of arguments

metaserver should write a \n after the ip:port

send_queued_data() should return without doing anything if there is no data
to send
