@@ -14,6 +14,11 @@ the db
 
 fixed bug where the argument to the TYPE search parameter was not skipped
 
+search() should return a 404 error if the search failed
+
+modified synch_server() to first sync the users and channels, then do a bulk
+dump of the library table in hopes of improving performance.
+
 Changes from 0.10
 =================
 added max_connections config variable
